--- a/pages/email-verification.html
+++ b/pages/email-verification.html
@@ -22,7 +22,8 @@
 <body>
     <h1>Email Verification</h1>
     <p id="email"></p>
-    <button>Resend Email</button>
+    <button onclick="resendEmailHandler()">Resend Email</button>
+    <button onclick="goHomeHandler()">Go Home</button>
 </body>
 <script src="./../js/email-verification.js"></script>
 </html>
