--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script>
     <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyDmMs_YGzD8Qnt3688f4jX_oDWcYddPka0",
-            authDomain: "web-dev-batch-10.firebaseapp.com",
-            projectId: "web-dev-batch-10",
-            storageBucket: "web-dev-batch-10.appspot.com",
-            messagingSenderId: "912231437125",
-            appId: "1:912231437125:web:9426d074209834043c642c",
-            measurementId: "G-5F9XF5DR8V"
-        };
-        firebase.initializeApp(firebaseConfig)
+      const firebaseConfig = {
+        apiKey: "AIzaSyDmMs_YGzD8Qnt3688f4jX_oDWcYddPka0",
+        authDomain: "web-dev-batch-10.firebaseapp.com",
+        projectId: "web-dev-batch-10",
+        storageBucket: "web-dev-batch-10.appspot.com",
+        messagingSenderId: "912231437125",
+        appId: "1:912231437125:web:9426d074209834043c642c",
+        measurementId: "G-5F9XF5DR8V",
+      };
+      firebase.initializeApp(firebaseConfig);
     </script>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Sign Up</h1>
     <form onsubmit="signUp(); return false">
-        <input type="email" placeholder="Email Address" name="email" id="email" required />
-        <input type="password" placeholder="Password" id="password" required/>
-       <p id="message"></p>
-        <input type="submit" value="Sign Up" />
-        <a href="./log-in.html">Log In</a>
+      <input
+        type="text"
+        placeholder="Full Name"
+        name="full-name"
+        id="full-name"
+        required
+      />
+      <input
+        type="number"
+        placeholder="Phone Number"
+        id="phone"
+        name="phone"
+        required
+      />
+      <input type="url" placeholder="Profile url" id="profile" required />
+      <input
+        type="email"
+        placeholder="Email Address"
+        name="email"
+        id="email"
+        required
+      />
+      <input type="password" placeholder="Password" id="password" required />
+      <p id="message"></p>
+      <input type="submit" value="Sign Up" />
+      <a href="./log-in.html">Log In</a>
     </form>
-</body>
-<script src="./../js/sign-up.js"></script>
+  </body>
+  <script src="./../js/sign-up.js"></script>
 </html>
