--- a/pages/home.html
+++ b/pages/home.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script>
-    <script>
+    <!-- <script>
         const firebaseConfig = {
             apiKey: "AIzaSyDmMs_YGzD8Qnt3688f4jX_oDWcYddPka0",
             authDomain: "web-dev-batch-10.firebaseapp.com",
@@ -17,10 +17,12 @@
             measurementId: "G-5F9XF5DR8V"
         };
         firebase.initializeApp(firebaseConfig)
-    </script>
+    </script> -->
+    <script src="./../js/fireabase.js"></script>
 </head>
 <body>
     <h1>Home Page</h1>
+    <a href="./profile.html">Profile</a>
     <button onclick="logOut()">Log Out</button>
 <button onclick="currentUserHandler()">Current User</button>
 </body>
