--- a/pages/log-in.html
+++ b/pages/log-in.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script>
-    <script>
+    <!-- <script>
         const firebaseConfig = {
             apiKey: "AIzaSyDmMs_YGzD8Qnt3688f4jX_oDWcYddPka0",
             authDomain: "web-dev-batch-10.firebaseapp.com",
@@ -18,7 +18,8 @@
             measurementId: "G-5F9XF5DR8V"
         };
         firebase.initializeApp(firebaseConfig)
-    </script>
+    </script> -->
+    <script src="./../js/fireabase.js"></script>
 </head>
 
 <body>
@@ -30,6 +31,7 @@
         <input type="submit" value="Log In" />
     </form>
     <a href="./sign-up.html">Sign Up</a>
+    <a href="./forgot-password.html">Forgot Password</a>
 </body>
 <script src="./../js/log-in.js"></script>
 
