--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script>
-    <script>
+    <!-- <script>
         const firebaseConfig = {
             apiKey: "AIzaSyDmMs_YGzD8Qnt3688f4jX_oDWcYddPka0",
             authDomain: "web-dev-batch-10.firebaseapp.com",
@@ -18,7 +18,8 @@
             measurementId: "G-5F9XF5DR8V"
         };
         firebase.initializeApp(firebaseConfig)
-    </script>
+    </script> -->
+    <script src="./js/fireabase.js"></script>
 </head>
 <body>
    <img src="https://cdn.pixabay.com/animation/2023/10/08/03/19/03-19-26-213_512.gif" height="250"/>
