--- a/pages/home.html
+++ b/pages/home.html
@@ -23,6 +23,7 @@
 <body>
     <h1>Home Page</h1>
     <a href="./profile.html">Profile</a>
+    <a href="./realtime-database.html">Realtime database</a>
     <button onclick="logOut()">Log Out</button>
 <button onclick="currentUserHandler()">Current User</button>
 </body>
