--- a/pages/log-in.html
+++ b/pages/log-in.html
@@ -32,6 +32,9 @@
     </form>
     <a href="./sign-up.html">Sign Up</a>
     <a href="./forgot-password.html">Forgot Password</a>
+    <hr />
+    <hr />
+    <button onclick="loginWithGoogle()">Log In with Google</button>
 </body>
 <script src="./../js/log-in.js"></script>
 
