--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
     <!-- <script>
       const firebaseConfig = {
         apiKey: "AIzaSyDmMs_YGzD8Qnt3688f4jX_oDWcYddPka0",
@@ -37,7 +38,6 @@
         name="phone"
         required
       />
-      <input type="url" placeholder="Profile url" id="profile" required />
       <input
         type="email"
         placeholder="Email Address"
