--- a/pages/home.html
+++ b/pages/home.html
@@ -24,6 +24,7 @@
     <h1>Home Page</h1>
     <a href="./profile.html">Profile</a>
     <a href="./realtime-database.html">Realtime database</a>
+    <a href="./realtime-todo-list.html">Realtime Todo List</a>
     <button onclick="logOut()">Log Out</button>
 <button onclick="currentUserHandler()">Current User</button>
 </body>
