--- a/pages/home.html
+++ b/pages/home.html
@@ -25,6 +25,8 @@
     <a href="./profile.html">Profile</a>
     <a href="./realtime-database.html">Realtime database</a>
     <a href="./realtime-todo-list.html">Realtime Todo List</a>
+    <hr />
+    <a href="./firestore-database.html">Firestore database</a>
     <button onclick="logOut()">Log Out</button>
 <button onclick="currentUserHandler()">Current User</button>
 </body>
