--- a/pages/firestore-database.html
+++ b/pages/firestore-database.html
@@ -6,10 +6,13 @@
     <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-storage.js"></script>
     <script src="./../js/fireabase.js"></script>
 </head>
 <body>
     <h1>Firestore Database</h1>
+    <input type="file" onchange="fileUpload(event)"  accept="image/png, image/jpeg, image/jpg"/>
+   
     <button onclick="addDataHandler()">Add Data</button>
 </body>
 <script src="./../js/firestore-database.js"></script>
